# ollama-workload-profiler

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.codex/: config.toml
.githooks/: pre-push
docs/superpowers/plans/: 2026-04-18-ollama-workload-profiler.md  2026-04-19-benchmark-logic-upgrade.md  2026-04-19-owp-remediation-pass.md
docs/superpowers/specs/: 2026-04-18-ollama-workload-profiler-design.md  2026-04-19-benchmark-logic-upgrade-design.md  2026-04-22-owp-compare-design.md
scripts/: bootstrap.py  run_pre_push_checks.py
src/ollama_workload_profiler/: __init__.py  cli.py  env_check.py  execution_settings.py  methodology.py  ollama_client.py  session.py
src/ollama_workload_profiler/benchmarks/: __init__.py  base.py  cold_warm.py  concurrency.py  context_scaling.py  output_scaling.py  profiles.py  prompt_scaling.py  smoke.py  stress.py  ttft.py
src/ollama_workload_profiler/metrics/: __init__.py  gpu.py  phases.py  process.py  sampler.py
src/ollama_workload_profiler/models/: __init__.py  failures.py  plan.py  results.py  summary.py  verdicts.py
src/ollama_workload_profiler/prompts/: __init__.py  fixtures.py  scenarios.py
src/ollama_workload_profiler/reporting/: __init__.py  artifacts.py  compare.py  markdown.py  plots.py  summary.py  verdicts.py
tests/: test_bootstrap.py  test_cli_validation.py  test_compare.py  test_env_check.py  test_ollama_client.py  test_pre_push.py  test_readme.py  test_reporting.py  test_session.py  test_verdicts.py
