[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-workload-profiler"
version = "0.3.0"
description = "CLI-first local benchmarking and profiling for Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer==0.16.0",
  "rich==14.0.0",
  "httpx==0.28.1",
  "psutil==7.0.0",
  "pydantic==2.11.3",
  "jinja2==3.1.6",
  "ruff==0.15.9",
  "pytest==9.0.3",
]

[project.scripts]
owp = "ollama_workload_profiler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
